--- a/serverless.env.yml.sample
+++ b/serverless.env.yml.sample
@@ -1,2 +1,13 @@
 # name
 NAME_PREFIX: sample  # リソース名の重複を防ぐためなどに使用(例:S3 Bucket名)
+
+# aws
+HVF_ACCESS_KEY_ID: xxxxxx
+HVF_SECRET_ACCESS_KEY: yyyyyy
+
+# TimeZone
+TZ : 'Asia/Tokyo'
+
+# Auth0
+AUTH0_DOMAIN: xxxxx
+API_AUDIENCE: yyyyy
