slack、LINE Notifyへの通知を追加

--- a/serverless.env.yml.sample
+++ b/serverless.env.yml.sample
@@ -11,3 +11,9 @@ TZ : 'Asia/Tokyo'
 # Auth0
 AUTH0_DOMAIN: xxxxx
 API_AUDIENCE: yyyyy
+
+# slack
+SLACK_NOTIFY_URL: [webhook URL]
+
+# LINE Notify
+LINE_NOTIFY_ACCESS_TOKEN: [access_token]
