アクセスキー、シークレットキー関連をIAMに変更

--- a/serverless.yml
+++ b/serverless.yml
@@ -45,8 +45,6 @@ provider:
 
 # you can define service wide environment variables here
   environment:
-    HVF_ACCESS_KEY_ID: ${file(./serverless.env.yml):HVF_ACCESS_KEY_ID}
-    HVF_SECRET_ACCESS_KEY: ${file(./serverless.env.yml):HVF_SECRET_ACCESS_KEY}
     TZ: ${file(./serverless.env.yml):TZ}
     AUTH0_DOMAIN: ${file(./serverless.env.yml):AUTH0_DOMAIN}
     API_AUDIENCE: ${file(./serverless.env.yml):API_AUDIENCE}
@@ -75,9 +73,9 @@ functions:
   #
   # Amazon API Gateway: センシングデータの取得
   #
-  # TODO シークレットキーじゃなく、Roleでアクセスするように修正！
   range_environment:
     handler: handler.range_environment
+    role: IotActionRoleForLambda
     events:
       - http:
           path: environment/range
@@ -93,6 +91,7 @@ functions:
   #
   iot_devices:
     handler: handler.iot_devices
+    role: IotActionRoleForLambda
     events:
       - http:
           path: iot_devices
@@ -118,7 +117,7 @@ functions:
       - iot:
           name: "Notify"
           sql: "SELECT *, topic(2) as imsi FROM 'environment/+'"
-          description: "Notify of slack and LINE Notify"
+          description: "Notify to slack and LINE Notify"
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
@@ -274,6 +273,36 @@ resources:
                           - Ref: 'AWS::Region'
                           - Ref: 'AWS::AccountId'
                           - '*'
+                - Effect: Allow
+                  Action:
+                    - dynamodb:Scan
+                    - dynamodb:GetItem
+                    - dynamodb:Query
+                  Resource:
+                    - 'Fn::Join':
+                        - ''
+                        -
+                          - 'arn:aws:dynamodb:'
+                          - Ref: 'AWS::Region'
+                          - ':'
+                          - Ref: 'AWS::AccountId'
+                          - ":table/"
+                          - Ref: DynamoDbEnvironment
+                - Effect: Allow
+                  Action:
+                    - dynamodb:Scan
+                    - dynamodb:GetItem
+                    - dynamodb:Query
+                  Resource:
+                    - 'Fn::Join':
+                        - ''
+                        -
+                          - 'arn:aws:dynamodb:'
+                          - Ref: 'AWS::Region'
+                          - ':'
+                          - Ref: 'AWS::AccountId'
+                          - ":table/"
+                          - Ref: DynamoDbDevice
     #
     # AWS IoT ルール、アクション
     #
