--- a/serverless.yml
+++ b/serverless.yml
@@ -50,6 +50,7 @@ provider:
     API_AUDIENCE: ${file(./serverless.env.yml):API_AUDIENCE}
     SLACK_NOTIFY_URL: ${file(./serverless.env.yml):SLACK_NOTIFY_URL}
     LINE_NOTIFY_ACCESS_TOKEN: ${file(./serverless.env.yml):LINE_NOTIFY_ACCESS_TOKEN}
+    THING_NAME: ${file(./serverless.env.yml):THING_NAME}
     ENV: ${opt:stage}
 
 # you can add packaging information here
@@ -118,6 +119,17 @@ functions:
           name: "Notify"
           sql: "SELECT *, topic(2) as imsi FROM 'environment/+'"
           description: "Notify to slack and LINE Notify"
+  #
+  # S3への一時的なアクセス権をSTSから取得する
+  #
+  create_token_for_image_upload:
+    handler: handler.create_token_for_image_upload
+    role: CreateTokenRole
+    events:
+      - iot:
+          name: "CreateTokenForImageUpload"
+          sql: "SELECT topic(3) AS imsi FROM 'token/req/+'"
+          description: "create token for image upload"
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
@@ -204,6 +216,26 @@ resources:
           - AttributeName: imsi
             KeyType: HASH
         # プロビジョニング用設定値
+        # ProvisionedThroughput:
+        #   ReadCapacityUnits: 3
+        #   WriteCapacityUnits: 3
+        # On-Demand用設定値
+        BillingMode: PAY_PER_REQUEST
+    # S3へアップロードした画像情報
+    DynamoDbCamImages:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: cam_images-${opt:stage}
+        AttributeDefinitions:
+          - AttributeName: imsi
+            AttributeType: S
+          - AttributeName: timestamp
+            AttributeType: N
+        KeySchema:
+          - AttributeName: imsi
+            KeyType: HASH
+          - AttributeName: timestamp
+            KeyType: RANGE
         # ProvisionedThroughput:
         #   ReadCapacityUnits: 3
         #   WriteCapacityUnits: 3
@@ -303,6 +335,192 @@ resources:
                           - Ref: 'AWS::AccountId'
                           - ":table/"
                           - Ref: DynamoDbDevice
+    # S3への一時的なアクセス権をSTSから取得する時のRole
+    CreateTokenRole:
+      Type: AWS::IAM::Role
+      Properties:
+        RoleName: create_token_role
+        AssumeRolePolicyDocument:
+          Version: "2012-10-17"
+          Statement:
+            - Effect: Allow
+              Principal:
+                Service:
+                  - lambda.amazonaws.com
+              Action:
+                - sts:AssumeRole
+        Policies:
+          - PolicyName: CreateTokenPolicy
+            PolicyDocument:
+              Version: "2012-10-17"
+              Statement:
+                - Effect: Allow
+                  Action:
+                    - logs:CreateLogGroup
+                    - logs:CreateLogStream
+                    - logs:PutLogEvents
+                  Resource:
+                    - 'Fn::Join':
+                        - ':'
+                        -
+                          - 'arn:aws:logs'
+                          - Ref: 'AWS::Region'
+                          - Ref: 'AWS::AccountId'
+                          - '*'
+                - Effect: Allow
+                  Action:
+                    - iot:*
+                  Resource: '*'
+    ImageUploadS3:
+      Type: AWS::IAM::Role
+      Properties:
+        RoleName: image_upload_s3_role
+        AssumeRolePolicyDocument:
+          Version: "2012-10-17"
+          Statement:
+            - Effect: Allow
+              Principal:
+                Service:
+                  - s3.amazonaws.com
+              Action:
+                - sts:AssumeRole
+            - Effect: Allow
+              Principal:
+                AWS:
+                  - Fn::GetAtt: [CreateTokenRole, Arn]
+              Action:
+                - sts:AssumeRole
+    CreateUploadThingRole:
+      Type: AWS::IAM::Role
+      Properties:
+        RoleName: create_upload_thing_role
+        AssumeRolePolicyDocument:
+          Version: "2012-10-17"
+          Statement:
+            - Effect: Allow
+              Principal:
+                Service:
+                  - lambda.amazonaws.com
+              Action:
+                - sts:AssumeRole
+    StsPublishPolicies:
+      Type: AWS::IAM::Policy
+      Properties:
+        PolicyName: StsPublishPolicy
+        PolicyDocument:
+          Version: "2012-10-17"
+          Statement:
+            - Effect: Allow
+              Action:
+                - sts:AssumeRole
+              Resource:
+                Fn::GetAtt:
+                  - ImageUploadS3
+                  - Arn
+        Roles: [ Ref: CreateTokenRole ]
+    LambdaCreatePolicies:
+      Type: AWS::IAM::Policy
+      Properties:
+        PolicyName: lambdaCreatePolicy
+        PolicyDocument:
+          Version: "2012-10-17"
+          Statement:
+            - Effect: Allow
+              Action:
+                - iot:Publish
+              Resource:
+                - 'Fn::Join':
+                    - ''
+                    -
+                      - "arn:aws:iot:"
+                      - Ref: 'AWS::Region'
+                      - ':'
+                      - Ref: 'AWS::AccountId'
+                      - ':'
+                      - "topic/image_upload/token/res/*"
+        Roles: [ Ref: CreateTokenRole ]
+    CreateUploadThingPolicies:
+      Type: AWS::IAM::Policy
+      Properties:
+        PolicyName: CreateUploadThingPolicy
+        PolicyDocument:
+          Version: "2012-10-17"
+          Statement:
+            - Effect: Allow
+              Action:
+                - logs:CreateLogGroup
+                - logs:CreateLogStream
+                - logs:PutLogEvents
+              Resource:
+                - 'Fn::Join':
+                    - ':'
+                    -
+                      - 'arn:aws:logs'
+                      - Ref: 'AWS::Region'
+                      - Ref: 'AWS::AccountId'
+                      - "*"
+            - Effect: Allow
+              Action:
+                - iot:AttachPrincipalPolicy
+                - iot:CreateThing
+                - iot:AttachThingPrincipal
+                - iot:ListThingPrincipals
+                - iot:DetachThingPrincipal
+                - iot:ListCertificates
+                - iot:GetThingShadow
+                - iot:UpdateThingShadow
+              Resource: "*"
+        Roles: [ Ref: CreateUploadThingRole ]
+    S3WritePolicies:
+      Type: AWS::IAM::Policy
+      Properties:
+        PolicyName: S3WritePolicy
+        PolicyDocument:
+          Version: "2012-10-17"
+          Statement:
+            - Effect: Allow
+              Action:
+                - s3:PutObject
+              Resource:
+                Fn::Join:
+                  - ""
+                  - - "arn:aws:s3:::"
+                    - "Ref" : "IoTMakingBucket"
+                    - "/*"
+        Roles: [ Ref: ImageUploadS3 ]
+    S3ListPolicies:
+      Type: AWS::IAM::Policy
+      Properties:
+        PolicyName: S3ListPolicy
+        PolicyDocument:
+          Version: "2012-10-17"
+          Statement:
+            - Effect: Allow
+              Action:
+                - s3:ListBucket
+              Resource:
+                Fn::Join:
+                  - ""
+                  - - "arn:aws:s3:::"
+                    - "Ref" : "IoTMakingBucket"
+        Roles: [ Ref: ImageUploadS3 ]
+    S3GetPolicies:
+      Type: AWS::IAM::Policy
+      Properties:
+        PolicyName: S3GetPolicy
+        PolicyDocument:
+          Version: "2012-10-17"
+          Statement:
+            - Effect: Allow
+              Action:
+                - s3:GetObject
+              Resource:
+                Fn::Join:
+                  - ""
+                  - - "arn:aws:s3:::"
+                    - "Ref" : "IoTMakingBucket"
+                    - "/*"
+        Roles: [ Ref: ImageUploadS3 ]
     #
     # AWS IoT ルール、アクション
     #
@@ -318,6 +536,22 @@ resources:
                 PutItem:
                   TableName:
                     Ref: DynamoDbEnvironment
+                RoleArn:
+                  Fn::GetAtt:
+                    - IoTRole
+                    - Arn
+    # S3へアップロードした画像情報をDynamoDBへ登録するルール、アクション
+    CamImagesThingRule:
+      Type: AWS::IoT::TopicRule
+      Properties:
+        TopicRulePayload:
+          RuleDisabled: false
+          Sql: "SELECT *, topic(3) as imsi FROM 'cam/images/+'"
+          Actions:
+            - DynamoDBv2:
+                PutItem:
+                  TableName:
+                    Ref: DynamoDbCamImages
                 RoleArn:
                   Fn::GetAtt:
                     - IoTRole
