--- a/serverless.yml
+++ b/serverless.yml
@@ -141,6 +141,12 @@ functions:
           name: "NotificationSensorEnvironment"
           sql: "SELECT *, topic(2) as imsi FROM 'environment/+'"
           description: "notification sensor environment"
+  #
+  # S3 TriggerでLambdaを起動
+  #
+  notification_twitter:
+    handler: handler.notification_twitter
+    role: S3TriggerRoleForLambda
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
@@ -185,19 +191,6 @@ functions:
 resources:
   Resources:
     #
-    # S3 TriggerでLambdaを起動
-    #
-    NotificationTwitterLambda:
-      Type: AWS::Lambda::Function
-      Properties:
-        Handler: handler.notification_twitter
-        FunctionName: notification_twitter
-        Role:
-          Fn::GetAtt:
-            - "S3TriggerRoleForLambda"
-            - "Arn"
-        Runtime: "python3.7"
-    #
     # S3 bucketの構築
     #
     IoTMakingBucket:
@@ -215,9 +208,13 @@ resources:
                     - Name: suffix
                       Value: jpg
               Function:
-                'Fn::GetAtt':
-                  - NotificationTwitterLambda
-                  - Arn
+                - 'Fn::Join':
+                    - ':'
+                    -
+                      - 'arn:aws:lambda'
+                      - Ref: 'AWS::Region'
+                      - Ref: 'AWS::AccountId'
+                      - 'function:iot-making-for-sls-dev-notification_twitter'
     #
     # DynamoDBのテーブル構築
     #
@@ -288,14 +285,20 @@ resources:
       Properties:
         Action: "lambda:InvokeFunction"
         FunctionName:
-          'Fn::GetAtt':
-            - NotificationTwitterLambda
-            - Arn
+          - 'Fn::Join':
+              - ':'
+              -
+                - 'arn:aws:lambda'
+                - Ref: 'AWS::Region'
+                - Ref: 'AWS::AccountId'
+                - 'function:iot-making-for-sls-dev-notification_twitter'
         Principal: "s3.amazonaws.com"
-        SourceArn: !Join
-          - ""
-          - - "arn:aws:s3:::"
-            - Ref: IoTMakingBucket
+        SourceArn:
+          - 'Fn::Join':
+              - ":"
+              -
+                - "arn:aws:s3:::"
+                - Ref: IoTMakingBucket
     #
     # Role, Policy
     #
