Twitterへの画像投稿機能を追加

--- a/serverless.env.yml.sample
+++ b/serverless.env.yml.sample
@@ -13,3 +13,9 @@ SLACK_NOTIFY_URL: [webhook URL]
 
 # LINE Notify
 LINE_NOTIFY_ACCESS_TOKEN: [access_token]
+
+# twitter
+TWITTER_CONSUMER_KEY: aaaaa
+TWITTER_CONSUMER_SECRET: bbbbb
+TWITTER_ACCESS_TOKEN: ccccc
+TWITTER_ACCESS_TOKEN_SECRET: ddddd
