--- a/serverless.yml
+++ b/serverless.yml
@@ -18,6 +18,7 @@ service: iot-making-for-sls
 # You can pin your service to only deploy with a specific Serverless version
 # Check out our docs for more details
 # frameworkVersion: "=X.X.X"
+frameworkVersion: ^3.22.0
 
 provider:
   name: aws
